# phy

./: .codespellrc  .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  appveyor.yml  codecov.yml  conftest.py  environment.yml  mkdocs.yml  phy_config.example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  python-test.yml
.github/issue-audit/: 2026-07.yaml
.github/workflows/: ci.yml  codespell.yml  python-test.yml  upstream-compat.yml
.release-smoke/: latest-testpypi-version.txt
deprecated/: .travis.yml  environment.yml  requirements.txt  setup.cfg  setup.py
docs/: advanced.md  analysis.md  announcement_2.1.0.md  announcement_2.1.0rc1.md  api.md  changelog.md  cli.md  cluster-manual.md  clustering.md  config.md  configuration.md  customization.md  dataset.md  developer.md  faq.md  gui.md  index.md  install.md  installation.md  intro.md  io.md  keyboard_customization.md  outputs.md  overview.md  performance.md  plot.md  plugins.md  quickstart.md  release.md  release_2.1.0rc1.md  releasing.md  shortcuts.md  similarity.md  sorting_user_guide.md  terminology.md  troubleshooting.md  visualization.md
installer/: environment.yml  install.bat  install.sh
phy/: __init__.py  cli.py  conftest.py
phy/apps/: __init__.py  _utils.py  base.py
phy/apps/kwik/: __init__.py  gui.py
phy/apps/template/: __init__.py  gui.py  model.py
phy/apps/tests/: test_base.py  test_correlogram.py
phy/apps/trace/: __init__.py  gui.py
phy/cluster/: __init__.py  _history.py  _utils.py  algorithms.py  automaton.py  clustering.py  controller.py  default_settings.py  gui.py  kwik_view_models.py  launcher.py  picker.py  session.py  supervisor.py  view_models.py
phy/cluster/algorithms/: __init__.py  default_settings.py  klustakwik.py
phy/cluster/manual/: __init__.py  _history.py  _update_info.py  _updated_data.py  _utils.py  cluster_info.py  cluster_metadata.py  cluster_stats.py  cluster_view.py  clustering.py  controller.py  default_settings.py  gui.py  gui_component.py  gui_plugin.py  gui_plugins.py  interface.py  selector.py  session.py  store.py  view_model.py  view_models.py  views.py  wizard.py
phy/cluster/tests/: conftest.py  test_algorithms.py  test_automaton.py  test_clustering.py  test_controller.py  test_history.py  test_launcher.py  test_picker.py  test_session.py  test_supervisor.py  test_utils.py  test_view_models.py  test_views.py
phy/cluster/views/: __init__.py  amplitude.py  base.py  cluscatter.py  correlogram.py  feature.py  featureview3d.py  histogram.py  probe.py  raster.py  scatter.py  template.py  trace.py  waveform.py
phy/datasets/: mock.py
phy/datasets/tests/: test_mock.py
phy/detect/: default_settings.py  spikedetekt.py  store.py
phy/detect/tests/: test_spikedetekt.py  test_store.py
phy/electrode/: __init__.py  layout.py  mea.py
phy/electrode/probes/: 1x32_buzsaki.prb  A1x16-3mm-150-177-CM16.prb  A1x16-5mm-100-703-H16d_15mm.prb  A1x16-5mm-150-177-CM16LP.prb  A1x16-5mm-150-177-HP16_21mm.prb  A1x16-5mm-25-177-Z16.prb  A1x16-Poly2-5mm-50-177-MRCM16.prb  A1x16-Poly2-5mm-50s-177-OZ16.prb  A1x32-10mm-50-177-F32.prb  A1x32-5mm-25-177-Z32.prb  A1x32-6mm-100-413-A32.prb  A1x32-Edge-10mm-20-177-A32.prb  A1x64-Poly2-6mm-23s-160-A64.prb  A1x8-2.5mm-150-413-CM16.prb  A1x8-4mm-200-1250-A16.prb  A2x16-10mm-100-500-177-A16pb32.prb  A2x16-10mm-100-500-177-HC32_21mm.prb  A2x16-10mm-50-500-413-A32.prb  A2x32-10mm-dia-200-100-Z64.prb  A2x32-6mm-235-160-HZ64_30mm.prb  A2x32-6mm-253-160-HC64_30.prb  A2x8-11mm-125-200-177-A16.prb  A3x32-6mm-120-500-703-A96.prb  A4x16-3.6mm-50-430-177-H64_30mm.prb  A4x4-3mm-100-125-177-C16.prb  A4x4-3mm-50-125-177-CM16LP.prb  A4x4-4mm-200-200-1250-A16.prb  (+33 more)
phy/ext/: slugify.py
phy/gui/: __init__.py  _utils.py  actions.py  base.py  dock.py  gui.py  qt.py  session.py  state.py  views.py  widgets.py
phy/io/: __init__.py  array.py  base.py  base_model.py  context.py  datasets.py  default_settings.py  experiment.py  h5.py  kwik_model.py  mock.py  sparse.py  store.py  traces.py  utils.py
phy/notebook/: utils.py
phy/plot/: __init__.py  _color.py  _mpl_utils.py  _panzoom.py  _spike_visual.py  _utils.py  _vispy_utils.py  axes.py  base.py  ccg.py  features.py  grid.py  interact.py  panzoom.py  plot.py  traces.py  transform.py  utils.py  visuals.py  waveforms.py
phy/plugins/: __init__.py  recluster.py
phy/scripts/: __init__.py  klustaviewa.py  phy_script.py
phy/session/: __init__.py  default_settings.py  session.py  view_models.py
phy/spikesort/: _utils.py  clustering.py  selector.py
phy/static/: clustertest.html  d3clusterwidget.css  d3clusterwidget.js  hackbackbone.html  hackme.js  switchkernel.js  utils.js  widgets.css  widgets.js
phy/stats/: __init__.py  ccg.py  clusters.py
phy/traces/: __init__.py  detect.py  filter.py  pca.py  spike_detect.py  waveform.py
phy/utils/: __init__.py  _bunch.py  _color.py  _misc.py  _types.py  array.py  cli.py  color.py  config.py  context.py  datasets.py  dock.py  event.py  geometry.py  logging.py  plugin.py  profiling.py  selector.py  settings.py  tempdir.py  testing.py
phy/utilslib/: __init__.py  _color.py  _types.py  event.py  tempdir.py  testing.py
phy/waveform/: filter.py  load.py  loader.py
plugins/: README.md  action_status_bar.py  cluster_metadata.py  cluster_metrics.py  cluster_stats.py  cluster_view_styling.py  color_scheme.py  custom_button.py  custom_columns.py  custom_similarity.py  custom_split.py  feature_view_custom_grid.py  filter_action.py  font_size.py  hello.py  ipython_view.py  matplotlib_view.py  n_spikes_views.py  opengl_view.py  raw_data_filter.py  recluster.py  shortcuts.py  umap_view.py
scripts/: check_basecanvas.py  check_qopenglwindow_non_headless.py  release_publish.py  release_smoke_test.sh
tests/: __init__.py
tests/scripts/: test_phy_spikesort.py
tools/: api.py  check_docs.py  extract_shortcuts.py  makefont.py  plugins_doc.py  release.py
(+236 files in other folders)
