[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phy"
version = "2.1.1.dev0" # No dynamic lookup needed
description = "Interactive visualization and manual spike sorting of large-scale ephys data"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
authors = [
    { name = "Cyrille Rossant (cortex-lab/UCL/IBL)", email = "cyrille.rossant+pypi@gmail.com" },
]
keywords = ["phy", "data analysis", "electrophysiology", "neuroscience"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Framework :: IPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

# specific version required for pyopengl >=3.1.9
dependencies = [
    "phylib>=2.7.0,<3",
    "click",
    "colorcet",
    "h5py",
    "joblib",
    "matplotlib",
    "mtscomp",
    "numpy",
    "pillow",
    "pip",
    "PyQt5>=5.15.11,<5.16",
    "pyopengl>=3.1.9",
    "qtconsole",
    "requests",
    "responses",
    "scipy",
    "setuptools",
    "tqdm",
    "traitlets",
    "ipykernel",
]

[project.urls]
Homepage = "https://phy.readthedocs.io/en/latest/"
Repository = "https://github.com/cortex-lab/phy"
Documentation = "https://phy.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "Cython>=3.0",
    "pytest",
    "pytest-qt",
    "PyQt5>=5.15.11,<5.16",
    "pytest-cov",
    "ruff",
    "coverage",
    "coveralls",
    "memory_profiler",
    "mkdocs",
]

[dependency-groups]
dev = [
    "Cython>=3.0",
    "pytest>=6.0",
    "pytest-qt>=4.0",
    "PyQt5>=5.15.11,<5.16",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
    "coverage>=6.0",
    "coveralls>=3.0",
    "memory_profiler>=0.60",
    "mkdocs>=1.4",
]

[project.scripts]
phy = "phy.apps:phycli"

[tool.setuptools.packages.find]
include = ["phy*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
phy = [
    ".vert",
    ".frag",
    ".glsl",
    ".npy",
    ".gz",
    ".txt",
    ".json",
    ".html",
    ".css",
    ".js",
    ".prb",
    ".ttf",
    "*.png",
]

[tool.uv]
required-version = "==0.11.31"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.pytest.ini_options]
testpaths = ["phy"]
addopts = "--ignore=phy/apps/kwik --cov=phy --cov-report=term-missing"
norecursedirs = ["experimental", ""]
filterwarnings = [
    "default",
    "ignore:pkg_resources is deprecated as an API\\.:UserWarning",
    "ignore:tostring\\(\\) is deprecated\\. Use tobytes\\(\\) instead\\.:DeprecationWarning",
    "ignore:The 'warn' method is deprecated, use 'warning' instead:DeprecationWarning",
    "ignore:unclosed file <_io\\.TextIOWrapper name='/dev/null'.*:ResourceWarning",
    "ignore::DeprecationWarning:OpenGL\\.GL\\.VERSION\\.GL_2_0",
    "ignore::DeprecationWarning:.",
    "ignore:numpy.ufunc",
    "ignore:Jupyter is migrating its paths to use standard platformdirs.*:DeprecationWarning",
]

[tool.coverage.run]
branch = false
source = ["phy"]
omit = [
    "/phy/ext/",
    "/phy/utils/tempdir.py",
    "/default_settings.py",
    "/phy/plot/gloo/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "continue",
    "qtbot.stop()",
    "_in_travis():",
    "_is_high_dpi():",
    "return$",
    "^\"\"\"",
]
omit = ["/phy/plot/gloo/"]
show_missing = true

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PIE", "NPY201"]
ignore = [
    "E265",   # block comment should start with '# '
    "E731",   # do not assign a lambda expression, use a def
    "E741",   # ambiguous variable name
    "W605",   # invalid escape sequence,
    "N806",
    "SIM102",
    "B007",
    "N803",
    "N802",
    "B018",
    "F401",
    "SIM118",
    "B015",
    "C416",
    "E402",
    "E501",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["phy"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
